--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,45 @@
+
+*{
+  box-sizing: border-box;
+}
+body{
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  background:linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(https://images.unsplash.com/photo-1510784722466-f2aa9c52fff6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyMDg4MDd8MHwxfHNlYXJjaHwxOXx8bmF0dXJlfGVufDB8fHx8MTY2OTM0ODgyNQ&ixlib=rb-4.0.3&q=80&w=1080);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0 20px;
+}
 .App {
   text-align: center;
+  width: 500px;
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0 2px 8px 4px rgba(0, 0, 0, 0.5);
 }
+.advice{
+  color: #2a4d69 ;
+  margin-bottom: 26px;
+  font-size: 20px;
+  line-height: 32px;
+}
+.btn{
+  padding: 6px 20px;
+  border: 2px solid #2a4d69;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #2a4d69;
+  text-transform: uppercase;
+  font-size: 12px;
+  line-height: 12px;
+  font-weight: bold;
 
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +74,4 @@
     transform: rotate(360deg);
   }
 }
+
