--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,10 @@ body{
   font-weight: bold;
 
 }
+.btn:hover{
+  background-color: #2a4d69;
+  color: #f5f5f5;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
